{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 118,
  "lineage": "adc1f348-bf5b-583a-ff73-519284354a21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0159ba7d35e262f7a",
            "domain": "vpc",
            "id": "eipalloc-0159ba7d35e262f7a",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-119-230.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.119.230",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monolith",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0598e240b85f35dbd",
            "arn": "arn:aws:ec2:ap-northeast-2:614643435268:instance/i-01eb6891ced0e66e2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01eb6891ced0e66e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-lecture",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa5857571d97352e",
            "private_dns": "ip-10-0-1-68.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.68",
            "public_dns": "ec2-3-36-77-170.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.77.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dce33d296ef61b45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0562e06e18c677f39",
            "tags": {
              "Name": "EC2-monolith",
              "Service": "monolith"
            },
            "tags_all": {
              "Name": "EC2-monolith",
              "Service": "monolith"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0882ceb0d62a3ab5d"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_security_group",
            "aws_subnet.public_subnet_monolith",
            "aws_vpc.monolith",
            "data.aws_ami.latest_monolith_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "monolith",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:614643435268:internet-gateway/igw-0ffb73abd34cca260",
            "id": "igw-0ffb73abd34cca260",
            "owner_id": "614643435268",
            "tags": {
              "Name": "IG-monolith",
              "Service": "monolith"
            },
            "tags_all": {
              "Name": "IG-monolith",
              "Service": "monolith"
            },
            "vpc_id": "vpc-00435de24c49b8f6d"
          },
          "dependencies": [
            "aws_vpc.monolith"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0159ba7d35e262f7a",
            "association_id": "eipassoc-0c547832d542b0032",
            "connectivity_type": "public",
            "id": "nat-07d2970a35498ef94",
            "network_interface_id": "eni-096a60ff84d7ddaa2",
            "private_ip": "10.0.1.208",
            "public_ip": "3.37.119.230",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0562e06e18c677f39",
            "tags": {
              "Name": "NATGW-monolith",
              "Service": "monolith"
            },
            "tags_all": {
              "Name": "NATGW-monolith",
              "Service": "monolith"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_monolith",
            "aws_vpc.monolith"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:614643435268:route-table/rtb-088e4863aa2c701dc",
            "id": "rtb-088e4863aa2c701dc",
            "owner_id": "614643435268",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d2970a35498ef94",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-private-monolith",
              "Service": "monolith"
            },
            "tags_all": {
              "Name": "RT-private-monolith",
              "Service": "monolith"
            },
            "timeouts": null,
            "vpc_id": "vpc-00435de24c49b8f6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet_monolith",
            "aws_vpc.monolith"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:614643435268:route-table/rtb-0fc5a805fac3c91b1",
            "id": "rtb-0fc5a805fac3c91b1",
            "owner_id": "614643435268",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffb73abd34cca260",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-public-monolith",
              "Service": "monolith"
            },
            "tags_all": {
              "Name": "RT-public-monolith",
              "Service": "monolith"
            },
            "timeouts": null,
            "vpc_id": "vpc-00435de24c49b8f6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.monolith",
            "aws_vpc.monolith"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050fb7c61c82ed84e",
            "route_table_id": "rtb-088e4863aa2c701dc",
            "subnet_id": "subnet-0823fa39b5e414082"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_monolith",
            "aws_subnet.public_subnet_monolith",
            "aws_vpc.monolith"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0826fe851a6854733",
            "route_table_id": "rtb-088e4863aa2c701dc",
            "subnet_id": "subnet-0b5cffd1344b4fabd"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_monolith_2",
            "aws_subnet.public_subnet_monolith",
            "aws_vpc.monolith"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067a1f5db55031ed2",
            "route_table_id": "rtb-0fc5a805fac3c91b1",
            "subnet_id": "subnet-0562e06e18c677f39"
          },
          "dependencies": [
            "aws_internet_gateway.monolith",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_monolith",
            "aws_vpc.monolith"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:614643435268:security-group/sg-0ad46bb4df2eef0bc",
            "description": "Security group for RDS DB instance, allows traffic from EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad46bb4df2eef0bc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0882ceb0d62a3ab5d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-security-group",
            "name_prefix": "",
            "owner_id": "614643435268",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-DB-monolith",
              "Service": "monolith"
            },
            "tags_all": {
              "Name": "SG-DB-monolith",
              "Service": "monolith"
            },
            "timeouts": null,
            "vpc_id": "vpc-00435de24c49b8f6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_security_group",
            "aws_vpc.monolith"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:614643435268:security-group/sg-0882ceb0d62a3ab5d",
            "description": "Security group for EC2 instance, allows specific traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0882ceb0d62a3ab5d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 65080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65080
              }
            ],
            "name": "ec2-security-group",
            "name_prefix": "",
            "owner_id": "614643435268",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-EC2-monolith",
              "Service": "monolith"
            },
            "tags_all": {
              "Name": "SG-EC2-monolith",
              "Service": "monolith"
            },
            "timeouts": null,
            "vpc_id": "vpc-00435de24c49b8f6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monolith"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_monolith",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:614643435268:subnet/subnet-0823fa39b5e414082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0823fa39b5e414082",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614643435268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-monolith-b",
              "Service": "monolith"
            },
            "tags_all": {
              "Name": "Subnet-monolith-b",
              "Service": "monolith"
            },
            "vpc_id": "vpc-00435de24c49b8f6d"
          },
          "dependencies": [
            "aws_vpc.monolith"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_monolith_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:614643435268:subnet/subnet-0b5cffd1344b4fabd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5cffd1344b4fabd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614643435268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-monolith-b",
              "Service": "monolith"
            },
            "tags_all": {
              "Name": "Subnet-monolith-b",
              "Service": "monolith"
            },
            "vpc_id": "vpc-00435de24c49b8f6d"
          },
          "dependencies": [
            "aws_vpc.monolith"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_monolith",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:614643435268:subnet/subnet-0562e06e18c677f39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0562e06e18c677f39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "614643435268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-monolith-a",
              "Service": "monolith"
            },
            "tags_all": {
              "Name": "Subnet-monolith-a",
              "Service": "monolith"
            },
            "vpc_id": "vpc-00435de24c49b8f6d"
          },
          "dependencies": [
            "aws_vpc.monolith"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "monolith",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:614643435268:vpc/vpc-00435de24c49b8f6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d1a2e104e7818fc",
            "default_route_table_id": "rtb-0346ac881abdc2579",
            "default_security_group_id": "sg-02477573582b4fb6e",
            "dhcp_options_id": "dopt-0c0444ba13d3fb597",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00435de24c49b8f6d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0346ac881abdc2579",
            "owner_id": "614643435268",
            "tags": {
              "Name": "VPC-monolith",
              "Service": "monolith"
            },
            "tags_all": {
              "Name": "VPC-monolith",
              "Service": "monolith"
            }
          }
        }
      ]
    }
  ]
}